# api-service/api/docs/swagger.yaml
@@ -4,29 +4,6 @@ definitions:
       message:
         type: string
     type: object
-  models.ListUsersRes:
-    type: object
-  models.Login:
-    properties:
-      email:
-        type: string
-      password:
-        type: string
-    type: object
-  models.RegisterReq:
-    properties:
-      email:
-        type: string
-      full_name:
-        type: string
-      password:
-        type: string
-    type: object
-  models.RegisterRes:
-    properties:
-      content:
-        type: string
-    type: object
   models.StandartError:
     properties:
       error:
@@ -38,119 +15,12 @@ definitions:
         type: string
       refresh_token:
         type: string
-      role:
-        type: string
-      user_id:
-        type: string
-    type: object
-  models.UserReq:
-    properties:
-      card:
-        type: string
-      date_of_birth:
-        type: string
-      email:
-        type: string
-      full_name:
-        type: string
-      gender:
-        type: string
-      password:
-        type: string
-      phone_number:
-        type: string
-    type: object
-  models.UserRes:
-    properties:
-      card:
-        type: string
-      created_at:
-        type: string
-      date_of_birth:
-        type: string
-      deleted_at:
-        type: string
-      email:
-        type: string
-      full_name:
-        type: string
-      gender:
-        type: string
-      id:
-        type: string
-      phone_number:
-        type: string
-      profile_img:
-        type: string
-      refresh_token:
-        type: string
-      role:
-        type: string
-      updated_at:
-        type: string
-    type: object
-  models.UserResCreate:
-    properties:
-      access_token:
-        type: string
-      birthday:
-        type: string
-      card:
-        type: string
-      email:
-        type: string
-      full_name:
-        type: string
-      gender:
-        type: string
-      id:
-        type: string
-      image_url:
-        type: string
-      phone_num:
-        type: string
-      refresh_token:
-        type: string
-      role:
-        type: string
     type: object
 info:
   contact: {}
   description: API for Touristan
   title: Welcome To Booking API
 paths:
-  /v1/admins/login:
-    post:
-      consumes:
-      - application/json
-      description: Api for login admin
-      parameters:
-      - description: Login
-        in: body
-        name: User
-        required: true
-        schema:
-          $ref: '#/definitions/models.Login'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserResCreate'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: LOGIN
-      tags:
-      - LOGIN
   /v1/token/{refresh}:
     get:
       consumes:
@@ -182,104 +52,11 @@ paths:
       summary: UPDATE TOKEN
       tags:
       - TOKEN
-  /v1/users:
+  /v1/users/:id:
     post:
       consumes:
       - application/json
-      description: Api for Create
-      parameters:
-      - description: createModel
-        in: body
-        name: User
-        required: true
-        schema:
-          $ref: '#/definitions/models.UserReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserRes'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: CREATE
-      tags:
-      - USER
-    put:
-      consumes:
-      - application/json
-      description: Api for Update
-      parameters:
-      - description: createModel
-        in: body
-        name: User
-        required: true
-        schema:
-          $ref: '#/definitions/models.UserReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserRes'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: UPDATE
-      tags:
-      - USER
-  /v1/users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Api for Delete
-      parameters:
-      - description: ID
-        in: query
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.RegisterRes'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: DELETE
-      tags:
-      - USER
-    get:
-      consumes:
-      - application/json
-      description: Api for Get
+      description: Api for tokens of user
       parameters:
       - description: ID
         in: path
@@ -292,7 +69,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.UserRes'
+            $ref: '#/definitions/models.TokenResp'
         "400":
           description: Bad Request
           schema:
@@ -303,206 +80,9 @@ paths:
             $ref: '#/definitions/models.StandartError'
       security:
       - BearerAuth: []
-      summary: GET
+      summary: TOKEN
       tags:
-      - USER
-  /v1/users/list:
-    get:
-      consumes:
-      - application/json
-      description: Api for ListUsers
-      parameters:
-      - in: query
-        name: limit
-        type: integer
-      - in: query
-        name: page
-        type: integer
-      - in: query
-        name: column
-        type: string
-      - in: query
-        name: value
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.ListUsersRes'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: LIST USERS
-      tags:
-      - USER
-  /v1/users/list/deleted:
-    get:
-      consumes:
-      - application/json
-      description: Api for ListDeletedUsers
-      parameters:
-      - in: query
-        name: limit
-        type: integer
-      - in: query
-        name: page
-        type: integer
-      - in: query
-        name: column
-        type: string
-      - in: query
-        name: value
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.ListUsersRes'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: LIST DELETED USERS
-      tags:
-      - USER
-  /v1/users/login:
-    post:
-      consumes:
-      - application/json
-      description: Api for login user
-      parameters:
-      - description: Login
-        in: body
-        name: User
-        required: true
-        schema:
-          $ref: '#/definitions/models.Login'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserResCreate'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: LOGIN
-      tags:
-      - LOGIN
-  /v1/users/register:
-    post:
-      consumes:
-      - application/json
-      description: Api for register a new user
-      parameters:
-      - description: RegisterUser
-        in: body
-        name: User
-        required: true
-        schema:
-          $ref: '#/definitions/models.RegisterReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.RegisterRes'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: REGISTER USER
-      tags:
-      - SIGNUP
-  /v1/users/token:
-    get:
-      consumes:
-      - application/json
-      description: Api for Get user by token
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserRes'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: GET BY TOKEN
-      tags:
-      - USER
-  /v1/users/verify:
-    get:
-      consumes:
-      - application/json
-      description: Api for verify a new user
-      parameters:
-      - in: query
-        name: code
-        type: string
-      - in: query
-        name: email
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserResCreate'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.StandartError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.StandartError'
-      security:
-      - BearerAuth: []
-      summary: VERIFICATION
-      tags:
-      - SIGNUP
+      - TOKENS
 securityDefinitions:
   BearerAuth:
     in: header
